# pde_project

./: .gitignore  CMakeLists.txt  README.md  implement.md
mesh/: mesh-square-h0.2.msh  mesh-square-h0.4.msh
report/: main.aux  main.out  main.tex  main.toc
scripts/: dispersion_analysis.py  generate-meshes.sh  generate_plots.sh  mesh-square.geo  plot_3d_surface.py  plot_convergence.py  plot_energy.py  plot_energy_comparison.py  plot_error.py  plot_error_comparison.py  plot_report_supplement.py  run_experiments.sh  run_report_supplement.sh
slides/: beamerinnerthemepolimi.sty  beamerouterthemepolimi.sty  main.aux  main.nav  main.out  main.tex  main.toc
src/: Wave2D.cpp  Wave2D.hpp  main.cpp
